 Open Firm Accounting - NEWS

 Summary
 =======
 
   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.66
 ============

 Released on 

 New features and improvements:

   - Review and harmonize standard actions on dossier open (todo #1300, todo #1322).

 Bug fixes:

   - 

 Other changes:

   - ofaDossierPrefs: deprecated class.
   - ofaOpenPrefs: new class.

-----------------------------------------------------------------------
 Version 0.65
 ============

 Released on 2017-01-29

 New features and improvements:

   Dossiers are identified by a Random Pseudo Identifier (RPID); this
   identifier is automatically generated - if not already set - when
   opening a current exercice.

   - Add a JSON header to backup archives.
   - Backups now manage several data streams, of which dossier and Openbook headers.
   - Backups now have a comment (todo #792).
   - DossierManager: delete an exercice (todo #1316).
   - DossierOpen: set the read-only flag when selecting a closed exercice (todo #1321).
   - ExerciceNew: create a new exercice.
   - ExerciceTreeview: automatically selects the first exercice (todo #1337).
   - Replace Backup standard dialog box with an assistant (todo #1317).
   - Restore assistant: implements restore protection rules (todo #1320).
   - Restore assistant: does not require user confirmation on new dossier (todo #1336).
   - UserPreferences: choose between reordering and detaching main tabs (todo #1147).

   + ofa-unzip: command-line utility to unarchive a data flow on stdout.

 Bug fixes:

   - some.

 Other changes:

   DBModel Core v34.

   - my_date_editable_set_entry_format(): renamed from my_date_editable_set_format (todo #1331).
   - my_date_editable_set_label_format(): renamed from my_date_editable_set_label (todo #1332).
   - myIBin: new interface (todo #1323).
   - myICollectionable: remove ofaHub dependancy (todo #1319).